# nexus-core

./: .env.example  .gitignore  BRIDGE_INTERFACES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  OPENAI_COMPAT_MAPPING.md  README.md  TETSigner.entitlements  docker-compose.yml  openapi.yaml  package-lock.json  package.json  tet-core.code-workspace
.github/workflows/: rust.yml
examples/: trigger_mint.rs
proptest-regressions/: invariant_tests.txt
scripts/: wallet_client_entry.mjs
src/: ai_filter.rs  ai_local.rs  ai_proxy.rs  attestation.rs  chaos.rs  compute_v1.rs  conductor.rs  conductor_plugins.rs  consensus.rs  e2ee.rs  energy_oracle.rs  executor.rs  founder_terminal.js  founding.html  founding.js  index.html  invariant_tests.rs  landing.js  ledger.rs  lib.rs  main.rs  marketplace.rs  metrics.rs  models.rs  network.rs  onchain.rs  oracle.rs  p2p.rs  p2p_dex.rs  p2p_network.rs  pqc_keystore.rs  protocol.rs  quantum_shield.rs  render_farm.rs  replication.rs  rest.rs  secret_founder_terminal.html  tee_compute.rs  test_env.rs  tests.rs  (+14 more)
src/ledger/: crypto.rs  peers.rs  settlement.rs  solana_client.rs
src/rest/: helpers.rs  routes.rs  state.rs  types.rs
src/rest/handlers/: admin.rs  ai.rs  assets.rs  b2b.rs  dex.rs  enterprise.rs  founder.rs  founding.rs  ledger.rs  logs.rs  metrics.rs  mod.rs  network.rs  pages.rs  phase4.rs  system.rs  telemetry.rs  ui.rs  vision.rs  wallet.rs  worker.rs
src/tet_worker/: mod.rs
src/vision/: caac.rs  fluid_net.rs  mod.rs  pqc_bridge.rs  thermo_genesis.rs  zk_court.rs
